[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "can-replay"
version = "0.1.0"
description = "Replay CAN log request/response pairs over ISO-TP using socketcan"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Proprietary"}
authors = [
  { name = "can-replay" }
]
dependencies = [
  "scapy>=2.5.0"
]

[project.scripts]
can-replay = "can_replay.cli:main"
enet-replay = "tcp_replay.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["can_replay*", "tcp_replay*"]
